# tauri

./: Cargo.toml
core/tauri-core/: Cargo.toml
core/tauri-dylib/: Cargo.toml
core/tauri-dylib/src/: lib.rs
src/: lib.rs
