[package]
authors = [ "Tauri Programme within The Commons Conservancy" ]
categories = [ "gui", "web-programming" ]
description = "Make tiny, secure apps for all desktop platforms with Tauri"
edition = "2021"
rust-version = "1.59"
exclude = [ "/test", "/.scripts", "CHANGELOG.md", "/target" ]
homepage = "https://tauri.app"
license = "Apache-2.0 OR MIT"
name = "tauri"
readme = "README.md"
repository = "https://github.com/tauri-apps/tauri"
version = "1.2.3"

[workspace]
members = [
  # core
  "core/tauri-core",
  "core/tauri-dylib",
  "core/tauri-runtime",
  "core/tauri-runtime-wry",
  "core/tauri-macros",
  "core/tauri-utils",
  "core/tauri-build",
  "core/tauri-codegen",
  "core/config-schema",

  # integration tests
  "core/tests/restart",
  "core/tests/app-updater"
]

exclude = [
  # examples that can be compiled with the tauri CLI
  "examples/api/src-tauri",
  "examples/updater/src-tauri",
  "examples/resources/src-tauri",
  "examples/sidecar/src-tauri",
  "examples/web/core",
  "examples/workspace"
]

# default to small, optimized workspace release binaries
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"

[features]
default = ["core"]
dynamic = ["tauri-dylib"]

core = ["tauri-core"]
runtime = ["tauri-runtime"]
runtime-wry = ["tauri-runtime-wry"]
macros = ["tauri-macros"]
utils = ["tauri-utils"]
build = ["tauri-build"]
codegen = ["tauri-codegen"]
schema = ["tauri-schema"]
restart = ["restart"]
app-updater = ["app-updater"]

[dependencies]
tauri-core = { path = "core/tauri-core", version = "1.2.3", optional = true }
tauri-dylib = { path = "core/tauri-dylib", version = "1.2.3", optional = true }
tauri-runtime = { path = "core/tauri-runtime", version = "1.2.3", optional = true }
tauri-runtime-wry = { path = "core/tauri-runtime-wry", version = "1.2.3", optional = true }
tauri-macros = { path = "core/tauri-macros", version = "1.2.3", optional = true }
tauri-utils = { path = "core/tauri-utils", version = "1.2.3", optional = true }
tauri-build = { path = "core/tauri-build", version = "1.2.1", optional = true }
tauri-codegen = { path = "core/tauri-codegen", version = "1.2.3", optional = true }
tauri-schema = { path = "core/tauri-schema", version = "1.2.3", optional = true }
# restart = { path = "core/tests/restart", version = "1.2.3", optional = true }
# app-updater = { path = "core/tests/app-updater", version = "1.2.3", optional = true }
